--- a/v2raya/Dockerfile
+++ b/v2raya/Dockerfile
@@ -3,11 +3,13 @@ ENV VER=1.5.7 \
     PATH=$PATH:/usr/share/v2ray
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget iptables ip6tables v2ray bash unzip \
+        && apk --no-cache add -f ca-certificates tzdata wget iptables ip6tables bash unzip \
         && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir /etc/v2raya \
         && mkdir /etc/v2raya-web \
+        && mkdir /tmp/v2ray \
+        && mkdir /usr/share/v2ray \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/master/gui/public/favicon.ico \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/master/gui/public/index.html \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/master/gui/public/CNAME \
