--- a/.github/workflows/v2raya.yml
+++ b/.github/workflows/v2raya.yml
@@ -27,4 +27,10 @@ jobs:
       run: |
         cd ./clash
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
+    - name: docker adguardhome
+      run: |
+        cd ./AdGuardHome
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/adguardhome --platform=linux/arm64,linux/amd64,linux/arm/v7 . --push
+        
+        
        
