--- a/clash/Dockerfile
+++ b/clash/Dockerfile
@@ -4,7 +4,7 @@ ENV iptables=true \
 ADD /script/iptables.sh /tmp/iptables.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget curl bash iptables ipset jq nodejs npm \
+        && apk --no-cache add -f ca-certificates tzdata wget curl bash iptables nodejs npm \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && npm install -g pm2 \
