--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -39,6 +39,10 @@ jobs:
       run: |
         cd ./singbox
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/singbox --platform linux/arm64,linux/amd64 . --push
+    - name: docker mosdns
+      run: |
+        cd ./mosdns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/mosdns --platform linux/arm64,linux/amd64 . --push
     - name: docker v2p
       run: |
         cd ./v2p
