--- a/mosdns/Dockerfile
+++ b/mosdns/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget curl bash iptables openrc prometheus grafana \
+        && apk --no-cache add -f ca-certificates tzdata wget curl bash iptables openrc prometheus \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir /mosdns \
