--- a/mosdns/Dockerfile
+++ b/mosdns/Dockerfile
@@ -8,6 +8,8 @@ RUN set -ex \
         && rm -rf /var/cache/apk/*
 VOLUME /mosdns
 EXPOSE 53
+ADD prometheus /etc/init.d/prometheus
+RUN chmod +x /etc/init.d/prometheus
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 ENTRYPOINT /entrypoint.sh
