--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -43,6 +43,10 @@ jobs:
       run: |
         cd ./mosdns
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/mosdns --platform linux/arm64,linux/amd64 . --push
+    - name: docker sillygirl
+      run: |
+        cd ./mosdns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/sillygirl --platform linux/arm64,linux/amd64 . --push
     - name: docker v2p
       run: |
         cd ./v2p
