--- a/sillygirl/Dockerfile
+++ b/sillygirl/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget curl bash iptables \
+        && apk --no-cache add -f ca-certificates tzdata wget curl bash \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && chmod +x /entrypoint.sh \
