--- a/mosdns/Dockerfile
+++ b/mosdns/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine
+FROM alpine:edge
 ADD /init/prometheus /etc/init.d/prometheus
 ADD /init/mosdns /etc/init.d/mosdns
 ADD /init/prometheus.yml /etc/prometheus/prometheus.yml
