--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -47,6 +47,10 @@ jobs:
       run: |
         cd ./sillygirl
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/sillygirl --platform linux/arm64,linux/amd64 . --push
+    - name: docker blocky
+      run: |
+        cd ./blocky
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/blocky --platform linux/arm64,linux/amd64 . --push
     - name: docker v2p
       run: |
         cd ./v2p
