--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -2,7 +2,8 @@ FROM alpine:edge
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget curl bash blocky \
+        && apk --no-cache add -f ca-certificates tzdata wget curl bash \
+        && apk add blocky --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing/ \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir /blocky \
