--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -1,5 +1,4 @@
 FROM alpine:edge
-ENV blocky=0.20
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
@@ -7,8 +6,8 @@ RUN set -ex \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir /blocky \
-        && if [ $(arch) == x86_64 ]; then     wget -P /tmp  https://github.com/0xERR0R/blocky/releases/download/v$blocky/blocky_$blocky_Linux_x86_64.tar.gz;     tar -xvf /tmp/blocky_$blocky_Linux_x86_64.tar.gz;     mv /blocky_$blocky_Linux_x86_64/blocky /usr/bin/blocky;     chmod +x /usr/bin/blocky;     rm -rf /tmp/blocky_$blocky_Linux_x86_64.tar.gz; fi \
-        && if [ $(arch) == aarch64 ]; then    wget -P /tmp  https://github.com/0xERR0R/blocky/releases/download/v$blocky/blocky_$blocky_Linux_arm64.tar.gz;     tar -xvf /tmp/blocky_$blocky_Linux_arm64.tar.gz;     mv /blocky_$blocky_Linux_arm64/blocky /usr/bin/blocky;     chmod +x /usr/bin/blocky;     rm -rf /tmp/blocky_$blocky_Linux_arm64.tar.gz; fi \
+        && if [ $(arch) == x86_64 ]; then     wget -P /tmp  https://github.com/0xERR0R/blocky/releases/download/v0.20/blocky_0.20_Linux_x86_64.tar.gz;     tar -xvf /tmp/blocky_0.20_Linux_x86_64.tar.gz -C /tmp;     mv /tmp/blocky /usr/bin/blocky;     chmod +x /usr/bin/blocky;     rm -rf /tmp/blocky_0.20_Linux_x86_64.tar.gz; fi \
+        && if [ $(arch) == aarch64 ]; then    wget -P /tmp  https://github.com/0xERR0R/blocky/releases/download/v0.20/blocky_0.20_Linux_arm64.tar.gz;     tar -xvf /tmp/blocky_0.20_Linux_arm64.tar.gz -C /tmp;     mv /tmp/blocky /usr/bin/blocky;     chmod +x /usr/bin/blocky;     rm -rf /tmp/blocky_0.20_Linux_arm64.tar.gz; fi \
         && chmod +x /entrypoint.sh \
         && rm -rf /var/cache/apk/*
 VOLUME /blocky
