--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -33,8 +33,8 @@ jobs:
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/adguardhome --platform=linux/arm64,linux/amd64,linux/arm/v7 . --push
     - name: docker v2tls
       run: |
-        cd ./v2tls
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/v2tls-docker --platform=linux/amd64 . --push
+        cd ./xray
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/xray --platform=linux/amd64 . --push
     - name: docker singbox
       run: |
         cd ./singbox
