--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         cd ./AdGuardHome
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/adguardhome --platform=linux/arm64,linux/amd64,linux/arm/v7 . --push
-    - name: docker v2tls
+    - name: docker xray
       run: |
         cd ./xray
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/xray --platform=linux/amd64 . --push
