--- a/smartdns/smartdns.conf
+++ b/smartdns/smartdns.conf
@@ -8,7 +8,7 @@ cache-size 4096
 #是否持久化缓存
 cache-persist yes
 #缓存持久化文件路径
-cache-file /etc/v2raya/smartdns.cache
+cache-file /smartdns/smartdns.cache
 #域名结果 TTL
 rr-ttl 3600
 rr-ttl-min 60
@@ -16,7 +16,7 @@ rr-ttl-max 86400
 #日志记录等级
 log-level info
 #日志文件路径
-log-file /etc/v2raya/smartdns.log
+log-file /smartdns/smartdns.log
 #日志大小
 log-size 128K
 #日志归档个数
@@ -34,4 +34,4 @@ force-AAAA-SOA yes
 # 域名预先获取功能
 prefetch-domain yes
 #附加配置文件
-conf-file /etc/v2raya/anti-ad-for-smartdns.conf
+conf-file /smartdns/anti-ad-for-smartdns.conf
