--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -51,6 +51,10 @@ jobs:
       run: |
         cd ./blocky
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/blocky --platform linux/arm64,linux/amd64 . --push
+    - name: docker smartdns
+      run: |
+        cd ./smartdns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
     - name: docker v2p
       run: |
         cd ./v2p
