--- a/v2tls/default.conf
+++ b/v2tls/default.conf
@@ -4,6 +4,9 @@ server {
 	charset utf-8;
 
         location /ws {
+        if ($http_upgrade != "websocket") {
+            return 404;
+        }
         proxy_redirect off;
         proxy_pass http://127.0.0.1:8080;
         proxy_http_version 1.1;
