--- a/v2tls/Dockerfile
+++ b/v2tls/Dockerfile
@@ -7,10 +7,7 @@ RUN set -ex \
         && apk add tzdata \
         && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
-        && mkdir /tmp/xray \
-        && git clone https://github.com/xiongbao/we.dog \
-        && mv we.dog/* /var/lib/nginx/html/ \
-        && rm -rf /we.dog
+        && mkdir /tmp/xray
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 EXPOSE 80
