--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -34,7 +34,7 @@ jobs:
     - name: docker xray
       run: |
         cd ./v2tls
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/xray --platform=linux/amd64 . --push
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/xray --platform=linux/amd64,linux/arm64,linux/s390x . --push
     - name: docker singbox
       run: |
         cd ./singbox
