--- a/singbox/Dockerfile
+++ b/singbox/Dockerfile
@@ -8,6 +8,7 @@ RUN set -ex \
         && mkdir /singbox \
         && if [ $(arch) == x86_64 ]; then     wget -P /tmp  https://github.com/SagerNet/sing-box/releases/download/v$singbox/sing-box-$singbox-linux-amd64.tar.gz;     tar -xvf /tmp/sing-box-$singbox-linux-amd64.tar.gz;     mv /sing-box-$singbox-linux-amd64/sing-box /usr/bin/sing-box;     chmod +x /usr/bin/sing-box;     rm -rf /tmp/sing-box-$singbox-linux-amd64.tar.gz; fi \
         && if [ $(arch) == aarch64 ]; then    wget -P /tmp  https://github.com/SagerNet/sing-box/releases/download/v$singbox/sing-box-$singbox-linux-arm64.tar.gz;     tar -xvf /tmp/sing-box-$singbox-linux-arm64.tar.gz;     mv /sing-box-$singbox-linux-arm64/sing-box /usr/bin/sing-box;     chmod +x /usr/bin/sing-box;     rm -rf /tmp/sing-box-$singbox-linux-arm64.tar.gz; fi \
+        && if [ $(arch) == s390x ]; then    wget -P /tmp  https://github.com/SagerNet/sing-box/releases/download/v$singbox/sing-box-$singbox-linux-s390x.tar.gz;     tar -xvf /tmp/sing-box-$singbox-linux-s390x.tar.gz;     mv /sing-box-$singbox-linux-s390x/sing-box /usr/bin/sing-box;     chmod +x /usr/bin/sing-box;     rm -rf /tmp/sing-box-$singbox-linux-s390x.tar.gz; fi \
         && git clone https://github.com/xiongbao/we.dog \
         && mv we.dog/* /var/lib/nginx/html/ \
         && rm -rf /we.dog \
