--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -38,7 +38,7 @@ jobs:
     - name: docker singbox
       run: |
         cd ./singbox
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/singbox --platform linux/arm64,linux/amd64 . --push
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/singbox --platform linux/arm64,linux/amd64,linux/s390x . --push
     - name: docker mosdns
       run: |
         cd ./mosdns
