--- a/singbox/Dockerfile
+++ b/singbox/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
-ENV singbox=1.1-rc1
+ENV singbox=1.1
 RUN set -ex \
         && apk update -f && apk upgrade \
         && apk --no-cache add -f ca-certificates tzdata wget curl git nginx bash iptables \
