--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -55,6 +55,10 @@ jobs:
       run: |
         cd ./smartdns
         docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
+    - name: docker caddy-trojan
+      run: |
+        cd ./caddy-trojan
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/caddytrojan --platform linux/arm64,linux/amd64,linux/s390x . --push
     - name: docker v2p
       run: |
         cd ./v2p
