--- a/caddy-trojan/Dockerfile
+++ b/caddy-trojan/Dockerfile
@@ -14,6 +14,7 @@ RUN set -ex \
 	&& if [ $(arch) == s390x ]; then    curl -L -H "Cache-Control: no-cache" -o /usr/bin/caddy "https://caddyserver.com/api/download?os=linux&arch=s390x&p=github.com/imgk/caddy-trojan"; fi\
 	&& chmod +x /usr/bin/caddy \
 	&& chmod +x /entrypoint.sh \
+	&& mkdir -p /etc/caddy \
         && git clone https://github.com/xiongbao/we.dog \
         && rm -rf /var/cache/apk/*
 EXPOSE 80 443
