--- a/v2raya/Dockerfile
+++ b/v2raya/Dockerfile
@@ -9,7 +9,7 @@ RUN set -ex \
         && mkdir /etc/v2raya \
         && mkdir /etc/v2raya-web \
         && mkdir /tmp/xray \
-        && mkdir /usr/share/xray \
+        && mkdir /usr/share/v2ray \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/master/gui/public/favicon.ico \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/master/gui/public/index.html \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/master/gui/public/CNAME \
