--- a/v2tls/Dockerfile
+++ b/v2tls/Dockerfile
@@ -7,7 +7,8 @@ RUN set -ex \
         && apk add tzdata \
         && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
-        && mkdir /tmp/xray
+        && mkdir /tmp/xray \
+        && mkdir -p /etc/caddy
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 EXPOSE 80
