--- a/v2tls/Dockerfile
+++ b/v2tls/Dockerfile
@@ -1,5 +1,4 @@
 FROM alpine
-ADD default.conf /etc/nginx/http.d/default.conf
 RUN set -ex \
         && apk update \
         && apk upgrade \
@@ -7,7 +6,7 @@ RUN set -ex \
         && apk add tzdata \
         && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
-        && mkdir /tmp/xray \
+        && mkdir -p /tmp/xray \
         && mkdir -p /etc/caddy
 ADD entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
