--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -15,10 +15,10 @@ jobs:
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         export DOCKER_CLI_EXPERIMENTAL=enabled
         docker buildx version
-        docker run --privileged --rm docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
-        docker buildx create --use --name mybuilder
-        docker buildx inspect mybuilder --bootstrap
-        docker buildx ls
+        #docker run --privileged --rm docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
+        #docker buildx create --use --name mybuilder
+        #docker buildx inspect mybuilder --bootstrap
+        #docker buildx ls
     - name: docker v2raya
       run: |
         cd ./v2raya
