--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -19,49 +19,7 @@ jobs:
         docker buildx create --use --name mybuilder
         #docker buildx inspect mybuilder --bootstrap
         #docker buildx ls
-    - name: docker v2raya
+    - name: docker cfdns
       run: |
-        cd ./v2raya
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/v2raya --platform linux/arm64,linux/amd64,linux/arm/v7 . --push
-    - name: docker clash
-      run: |
-        cd ./clash
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/clash --platform linux/arm64,linux/amd64 . --push
-    - name: docker adguardhome
-      run: |
-        cd ./AdGuardHome
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/adguardhome --platform=linux/arm64,linux/amd64,linux/arm/v7 . --push
-    - name: docker xray
-      run: |
-        cd ./v2tls
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/xray --platform=linux/amd64,linux/arm64,linux/s390x . --push
-    - name: docker singbox
-      run: |
-        cd ./singbox
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/singbox --platform linux/arm64,linux/amd64,linux/s390x . --push
-    - name: docker mosdns
-      run: |
-        cd ./mosdns
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/mosdns --platform linux/arm64,linux/amd64 . --push
-    - name: docker sillygirl
-      run: |
-        cd ./sillygirl
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/sillygirl --platform linux/arm64,linux/amd64 . --push
-    - name: docker blocky
-      run: |
-        cd ./blocky
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/blocky --platform linux/arm64,linux/amd64 . --push
-    - name: docker smartdns
-      run: |
-        cd ./smartdns
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/smartdns --platform linux/arm64,linux/amd64 . --push
-    - name: docker caddy-trojan
-      run: |
-        cd ./caddy-trojan
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/caddytrojan --platform linux/arm64,linux/amd64,linux/s390x . --push
-    - name: docker v2p
-      run: |
-        cd ./v2p
-        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/elecv2p:v2p --platform=linux/arm64,linux/amd64,linux/arm/v7 . --push  
-        
-       
+        cd ./cfdns
+        docker buildx build -t ${{ secrets.DOCKER_USERNAME }}/cfdns --platform linux/arm64,linux/amd64. --push
