--- a/.github/workflows/hubdocker.yml
+++ b/.github/workflows/hubdocker.yml
@@ -17,8 +17,8 @@ jobs:
         docker buildx version
         #docker run --privileged --rm docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
         docker buildx create --use --name mybuilder
-        #docker buildx inspect mybuilder --bootstrap
-        #docker buildx ls
+        docker buildx inspect mybuilder --bootstrap
+        docker buildx ls
     - name: docker cfdns
       run: |
         cd ./cfdns
