--- a/v2raya/Dockerfile
+++ b/v2raya/Dockerfile
@@ -1,15 +1,15 @@
 FROM alpine
-ENV VER=2.0.1 \
+ENV VER=2.0.5 \
     PATH=$PATH:/usr/share/v2ray
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata wget iptables ip6tables bash unzip \
+        && apk --no-cache add -f ca-certificates tzdata wget iptables bash unzip \
         && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
-        && mkdir /etc/v2raya \
-        && mkdir /etc/v2raya-web \
-        && mkdir /tmp/v2ray \
-        && mkdir /usr/share/v2ray \
+        && mkdir -p /etc/v2raya \
+        && mkdir -p /etc/v2raya-web \
+        && mkdir -p /tmp/v2ray \
+        && mkdir -p /usr/share/v2ray \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/feat_v5/gui/public/favicon.ico \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/feat_v5/gui/public/index.html \
         && wget -P /etc/v2raya-web https://raw.githubusercontent.com/v2rayA/v2rayA/feat_v5/gui/public/CNAME \
