--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -16,7 +16,7 @@ COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
 ADD entrypoint.sh /entrypoint.sh
 RUN set -ex \
         && apk update -f && apk upgrade \
-        && apk --no-cache add -f ca-certificates tzdata curl bash \
+        && apk --no-cache add -f ca-certificates tzdata wget redis bash supervisor \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
         && mkdir /blocky \
