--- a/blocky/Dockerfile
+++ b/blocky/Dockerfile
@@ -1,16 +1,10 @@
-FROM alpine as builder
+FROM alpine:edge as builder
 
-WORKDIR /usr/src
-RUN apk update -f && apk upgrade
-RUN apk add git go upx
-
-RUN git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -o /usr/src/blocky/blocky
-
-#压缩文件
-RUN upx /usr/src/blocky/blocky
-
-WORKDIR /usr/src/blocky
-
+RUN set -ex \
+        && apk update -f && apk upgrade \
+        && apk add git go upx \
+        && git clone https://github.com/0xERR0R/blocky.git /usr/src/blocky && cd /usr/src/blocky && go build -o /usr/src/blocky/blocky \
+        && upx /usr/src/blocky/blocky
 FROM alpine
 COPY --from=builder /usr/src/blocky/blocky /usr/bin/blocky
 ADD entrypoint.sh /entrypoint.sh
@@ -19,7 +13,7 @@ RUN set -ex \
         && apk --no-cache add -f ca-certificates tzdata wget redis bash supervisor \
         && ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone \
-        && mkdir /blocky \
+        && mkdir -p /blocky \
         && chmod +x /entrypoint.sh \
         && rm -rf /var/cache/apk/*
 VOLUME /blocky
